--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/openquestionsapp
-spring.datasource.username=postgres
-spring.datasource.password=123456
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+#spring.datasource.url=jdbc:postgresql://localhost:5432/openquestionsapp
+#spring.datasource.username=postgres
+#spring.datasource.password=123456
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:mysql://localhost:3306/openquestionsapp
+spring.datasource.username=root
+spring.datasource.password=676401
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
 server.port = 8080
